--- a/themes/cactus-dark/layout/_partial/comments.ejs
+++ b/themes/cactus-dark/layout/_partial/comments.ejs
@@ -1,7 +1,12 @@
-<% if(page.comments && theme.disqus.enabled){ %>
+<% if(page.comments){ %>
     <div class="blog-post-comments">
+        <% if(theme.disqus_shortname){ %>
         <div id="disqus_thread">
             <noscript><%= __('comments.no_js') %></noscript>
         </div>
+        <% } %>
+        <% if(theme.valine.enable){ %>
+            <div class="vcomment"></div>
+        <% } %>
     </div>
 <% } %>
