--- a/themes/cactus-dark/layout/_partial/scripts.ejs
+++ b/themes/cactus-dark/layout/_partial/scripts.ejs
@@ -68,6 +68,33 @@
   });
   </script>
 <% } %>
+
+<!-- Valine Comments -->
+<% if (theme.valine.enable){ %>
+  <%- js('js/av-min.js') %>
+  <%- js('js/Valine.min.js') %>
+  <script type="text/javascript">
+      var notify = '<%= theme.valine.notify %>' == true ? true : false;
+      var verify = '<%= theme.valine.verify %>' == true ? true : false;
+      var GUEST_INFO = ['nick','mail','link'];
+      var guest_info = '<%= theme.valine.guest_info %>'.split(',').filter(function(item){
+        return GUEST_INFO.indexOf(item) > -1
+      });
+      guest_info = guest_info.length == 0 ? GUEST_INFO :guest_info;
+      new Valine({
+          el: '.vcomment',
+          notify: notify,
+          verify: verify,
+          appId: "<%= theme.valine.appId %>",
+          appKey: "<%= theme.valine.appKey %>",
+          avatar:"<%= theme.valine.avatar %>",
+          placeholder: "<%= theme.valine.placeholder %>",
+          guest_info:guest_info,
+          pageSize:"<%= theme.valine.pageSize %>"
+      })
+  </script>
+<% } %>
+
 <!-- Google Analytics -->
 <% if (theme.google_analytics.enabled && theme.google_analytics.id){ %>
     <script type="text/javascript">
