--- a/themes/cactus-dark/source/css/style.styl
+++ b/themes/cactus-dark/source/css/style.styl
@@ -217,23 +217,27 @@ code
     position: relative
    
     .prompt 
-      display: inline;
-      white-space: pre-wrap;
-      line-height: 30px;
-      margin-bottom: .75em;   
+      display: inline
+      white-space: pre-wrap
+      line-height: 30px
+      margin-bottom: .75em   
     
     .typed-cursor 
-      display: inline;
+      display: inline
 
     .typed-cursor:after 
-      display: inline;
-      vertical-align: -.15em;
-      width: .5em;
-      height: 12px;
-      margin-left: 5px;
-      background: #2bbc8a;
-      box-shadow: 0 0 0 rgba(31,240,66,.65);
-      -webkit-animation: cursor-blink 1.25s steps(1) infinite;
-      -o-animation: cursor-blink 1.25s steps(1) infinite;
-      animation: cursor-blink 1.25s steps(1) infinite;
+      display: inline
+      vertical-align: -.15em
+      width: .5em
+      height: 12px
+      margin-left: 5px
+      background: #2bbc8a
+      box-shadow: 0 0 0 rgba(31,240,66,.65)
+      -webkit-animation: cursor-blink 1.25s steps(1) infinite
+      -o-animation: cursor-blink 1.25s steps(1) infinite
+      animation: cursor-blink 1.25s steps(1) infinite
       content: ''
+
+  .vpower 
+    &.txt-right
+      display: none
