--- a/themes/cactus-dark/layout/_partial/scripts.ejs
+++ b/themes/cactus-dark/layout/_partial/scripts.ejs
@@ -95,6 +95,9 @@
   </script>
 <% } %>
 
+<!-- 阅读量计数 -->
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
 <!-- Google Analytics -->
 <% if (theme.google_analytics.enabled && theme.google_analytics.id){ %>
     <script type="text/javascript">
