--- a/themes/cactus-dark/layout/post.ejs
+++ b/themes/cactus-dark/layout/post.ejs
@@ -6,6 +6,13 @@
         <span itemprop="name"><% if (page.author) { %><%- page.author %><% } else { %><%- config.title %><% } %></span>
       </span> -->
       <%- partial('_partial/post/date', { post: page, class_name: 'postdate' }) %>
+      <!-- 文章阅读数 -->
+      <div class="article-tag">
+          <i class="fa fa-eye"></i>
+          <span id="busuanzi_container_page_pv">
+            <span id="busuanzi_value_page_pv">0</span>
+          </span>
+      </div>
       <%- partial('_partial/post/category') %>
       <%- partial('_partial/post/tag') %>
     </div>
