--- a/themes/cactus-dark/layout/index.ejs
+++ b/themes/cactus-dark/layout/index.ejs
@@ -40,7 +40,7 @@
 
 <section id="writing">
   <!-- <%= __('index.articles') %> -->
-  <span class="h1"><a href="<%- url_for("archives") %>">Archives</a></span>
+  <span class="h1"><a href="<%- url_for("archives") %>"><%= __('index.articles') %></a></span>
   <% if (theme.tags_overview && site.tags.length) { %>
   <span class="h2"><%= __('index.topics') %></span>
   <span class="widget tagcloud">
